# torero-container

./: .containerignore  .env  .gitignore  Containerfile  LICENSE  Makefile  README.md  cli-runner.sh  configure.sh  docker-bake.hcl  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  generate_schema.sh  push.sh  pyproject.toml  run_tests.sh  tools.sh
.github/workflows/: publish.yml
docs/: README.md  openapi.json  openapi.yaml  tests.md
opt/torero-api/: README.md  pyproject.toml
opt/torero-api/scripts/: generate_openapi.py  run_api.py  torero_api_ctl.sh
opt/torero-api/torero_api/: __init__.py  __main__.py  server.py
opt/torero-api/torero_api/api/: __init__.py
opt/torero-api/torero_api/api/v1/: __init__.py
opt/torero-api/torero_api/api/v1/endpoints/: __init__.py  database.py  decorators.py  execution.py  registries.py  repositories.py  secrets.py  services.py
opt/torero-api/torero_api/core/: __init__.py  torero_executor.py
opt/torero-api/torero_api/middleware/: __init__.py  execution_tracker.py
opt/torero-api/torero_api/models/: __init__.py  common.py  database.py  decorator.py  execution.py  registry.py  repository.py  secret.py  service.py
opt/torero-helpers/: enhanced_input_resolver.py  torero-wrapper
opt/torero-mcp/: LICENSE  README.md  example-config.yaml  pyproject.toml
opt/torero-mcp/docs/: claude_desktop_config.json
opt/torero-mcp/scripts/: torero_mcp_ctl.sh
opt/torero-mcp/torero_mcp/: __init__.py  cli.py  client.py  config.py  executor.py  input_resolver.py  server.py
opt/torero-mcp/torero_mcp/tools/: __init__.py  database_tools.py  decorator_tools.py  execution_tools.py  health_tools.py  loader.py  repository_tools.py  secret_tools.py  service_tools.py
opt/torero-ui/: CONTAINER-INTEGRATION.md  Containerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  example-topology.yml  pyproject.toml
opt/torero-ui/scripts/: torero_ui_ctl.sh
opt/torero-ui/torero_ui/: __init__.py  manage.py  settings.py  urls.py  wsgi.py
opt/torero-ui/torero_ui/dashboard/: admin.py  apps.py  input_resolver.py  models.py  services.py  urls.py  views.py
opt/torero-ui/torero_ui/dashboard/management/commands/: capture_cli_executions.py  create_test_data.py  monitor_cli_executions.py  sync_services.py
opt/torero-ui/torero_ui/dashboard/migrations/: 0001_initial.py
opt/torero-ui/torero_ui/static/css/: dashboard.css
opt/torero-ui/torero_ui/static/js/: dashboard.js
opt/torero-ui/torero_ui/templates/dashboard/: base.html  index.html
scripts/: generate_openapi.py
tests/: __init__.py  conftest.py  test_core.py  test_database.py  test_decorators.py  test_repositories.py  test_secrets.py  test_server.py  test_service_description.py  test_services.py
tests/integration/: __init__.py
tests/unit/: __init__.py
