# This is a development-only pyproject.toml for running tests
# The actual packages are in opt/torero-mcp, opt/torero-ui

[project]
name = "torero-container"
version = "0.1.0"
description = "Development environment for torero container projects"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers"
]
addopts = [
    "--cov=opt/torero-mcp/torero_mcp",
    "--cov=opt/torero-ui/torero_ui",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "-v"
]
pythonpath = ["opt/torero-mcp", "opt/torero-ui"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
source = ["opt/torero-mcp/torero_mcp", "opt/torero-ui/torero_ui"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\(.*\\):",
    "@(abc\\.)?abstractmethod",
]