[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torero-ui"
version = "0.1.0"
description = "Web dashboard for torero automation platform"
authors = [
  { name = "William Collins", email = "opensource@itential.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {text = "Apache-2.0"}
keywords = ["django", "dashboard", "torero", "automation", "ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
]
dependencies = [
  "django>=5.0.0,<6.0.0",
  "requests>=2.31.0",
  "whitenoise>=6.6.0",
  "python-dateutil>=2.8.2",
]

[project.urls]
"Homepage" = "https://github.com/torerodev/torero-ui"
"Bug Tracker" = "https://github.com/torerodev/torero-ui/issues"
"Documentation" = "https://github.com/torerodev/torero-ui#readme"
"Source Code" = "https://github.com/torerodev/torero-ui"

[project.scripts]
torero-ui = "torero_ui.manage:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "django-extensions>=3.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "django-extensions>=3.2.0",
    "build>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["torero_ui"]

[tool.hatch.build]
include = [
    "torero_ui/**/*.py",
    "torero_ui/**/*.html",
    "torero_ui/**/*.css",
    "torero_ui/**/*.js",
    "torero_ui/**/*.svg",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests/",
    ".github/",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "torero_ui.settings"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
testpaths = ["tests"]
addopts = [
    "--reuse-db",
    "-v"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "requests.*",
]
ignore_missing_imports = true